2010-07-19  Per Bothner  <per@bothner.com>

	* CpoolFloat.java: Remove no-longer-used class.
	Replaced by CpoolValue1.java - in 1997!

2010-04-10  Per Bothner  <per@bothner.com>

	* AnnotationEntry.java: New class - a placeholder for future
	annotation support.

2010-04-02  Per Bothner  <per@bothner.com>

	* PrimType.java (coerceFromObject): Add support for boolean.

2010-01-10  Per Bothner  <per@bothner.com>

	* RuntimeAnnotationsAttr.java (printAnnotationElementValue):
	Print a class annotation value.

	Support reading/printing (but not yet generating) annotations.
	* RuntimeAnnotationsAttr.java: New class, extends MiscAttr, for
	"RuntimeVisibleAnnotations" or "RuntimeInvisibleAnnotations".

	* Makefile.am: Update accordingly.
	* ClassTypeWriter.java (PRINT_EXTRAS): New flag.
	(printSpaces, getCpoolEntry, printConstantTersely,
	printContantUtf8AsClass): New methods.
	* ClassFileInput.java (readAttribute): Handle
	"RuntimeVisibleAnnotations" and "RuntimeInvisibleAnnotations".
	* MiscAttr.java (u1, u2): New methods.

	* Type.java (printSignature): Add fall-back/default.

	* StackMapTableAttr.java (write): Call super write.
	* ClassFileInput.java (getClassConstant): New convenience method.
	(readClassInfo): Use it.

	* dump.java (main): Better error message if opening jar: URL fails.

	* StackMapTableAttr.java:  Change to extend MiscAttr.
	Move data, dataLength to MiscAttr.
	Data and fdataLength now include the initial 'numEntries' field.
	(put1, pu2, u1, u2): Likewise.
	* ClassFileInput.java (readAttribute): Change since the data array
	passed to StackMapTableAttr includes initial 2-byte numEntries field.
	* MiscAttr.java (put1, pu2, u1, u2): Moved from StackMapTableAttr.
	(length): Rename to dataLength.

2009-10-19  Per Bothner  <per@bothner.com>

	* Type.java (getRealType): New method.

2009-09-29  Per Bothner  <per@bothner.com>

	* ClassTypeWriter.java (setClass): New method.

	* ClassTypeWriter.java (printMethod): New method.
	(printMethods): Use it.
