@@ -1,3 +1,7 @@
+2010-08-01  Per Bothner  <per@bothner.com>
+
+	* ClassType.java (make(String,ClassType)): Deprecate.
+
 2010-07-19  Per Bothner  <per@bothner.com>
 
 	* CpoolFloat.java: Remove no-longer-used class.
